Added Low-Stress Bicycle Facilities
Added Low-Stress Bicycle Facilities Topic Resource

--- a/en/topic-resources/active-living/index.html
+++ b/en/topic-resources/active-living/index.html
@@ -194,6 +194,8 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Active Living Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/439">Low-Stress Bicycle Facilities Boost Bicycle Commuting</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Lower-stress bicycle facilities—such as protected bicycle lanes—are significantly associated with larger increases in ridership at the block-group level compared with higher-stress facilities such as standard bicycle lanes and shared-lane markings.</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/438">Mobile Health Interventions Reduce Sitting Time in Older Adults</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>This meta-analysis of three randomized controlled trials found a significant decrease in sedentary behavior with mHealth interventions compared with conventional or no interventions (95% confidence interval.)</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/437">Implement Interventions through Sporting Organisations</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
