--- a/en/topic-resources/transportation/index.html
+++ b/en/topic-resources/transportation/index.html
@@ -194,6 +194,8 @@ theForm.elements[i].checked = status;
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Transportation Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/439">Low-Stress Bicycle Facilities Boost Bicycle Commuting</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Lower-stress bicycle facilities—such as protected bicycle lanes—are significantly associated with larger increases in ridership at the block-group level compared with higher-stress facilities such as standard bicycle lanes and shared-lane markings.</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/433">Visuals of Car-Free Streets Help Improve Support  for Related Policies</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
 <p>Photorealistic visuals of car-free streets helped people to imagine the benefits and to believe that the changes would significantly improve their lives. Accordingly, the visuals boosted levels of support for the changes.</p> <strong><a href="../../../en/topic-resources/detail/433">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/424">Traffic Safety Paradigm: Another Reason for Reducing Distance and Speed  </a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Safety" height="15" src="../../../public/images/small_cone_icon.gif" width="13"/></h2>
