Gratitude in Advertising
Also checked if I can link to two URLs

--- a/en/topic-resources/detail/440/index.html
+++ b/en/topic-resources/detail/440/index.html
@@ -105,30 +105,32 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Low-Stress Bicycle Facilities Boost Bicycle Commuting</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://www.nature.com/articles/s44284-025-00255-5?mc_cid=a15ab261c4&mc_eid=3070973850" target="_new">https://www.nature.com/articles/s44284-025-00255-5?mc_cid=a15ab261c4&mc_eid=3070973850</a></td>
+<td class="rt_text_box"><a href="https://doi.org/10.1080/00218499.2025.2464283" target="_new">https://doi.org/10.1080/00218499.2025.2464283</a></td>
+<td class="rt_text_box"><a href="https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette" target="_new">https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>Lower-stress bicycle facilities—such as protected bicycle lanes—are significantly associated with larger increases in ridership at the block-group level compared with higher-stress facilities such as standard bicycle lanes and shared-lane markings.</p></td>
+<td class="rt_text_box"><p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
 <ul>	
-<li>This study analysed six years of longitudinal data across 14,011 block groups in 28 US cities.</li>
-<li>Block groups that installed protected bicycle lanes experienced bicycle commuter increases 1.8 times larger than standard bicycle lane block groups, 1.6 times larger than shared-lane marking block groups and 4.3 times larger than block groups that did not install bicycle facilities.</li>
-<li>The protected bicycle lane mileage installed was significantly associated with bicycle commuter increases 52.5% stronger than standard bicycle lane mileage and 281.2% stronger than shared-lane marking mileage. 
-provides health information through electronic devices, even at home. This meta-analysis of three randomized controlled trials found a significant decrease in sedentary behavior with mHealth interventions compared with conventional or no interventions (95% confidence interval.)</li>
+<li>"When a person is scared and fearful, they're not as receptive to others. They might have heightened awareness of threats—push away the message and close off," she says. "But when a person is feeling grateful, they tend to be more open to people, and to messages."</li>
+<li>Study results showed that gratitude-based ads featuring human-like imagery were more likely to lead people to choose the healthier option. Fear, by contrast, was more effective when these human-like cues were absent.</li>
+<li>The findings suggest that combining gratitude with human-like visuals may be a powerful way to encourage healthy behavior.</li>
+<li>Based on three studies from the University of Auckland
+</li>
 </ul>
 </td>
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
-<td class="rt_text_box">Health, Active Living, Environment, Transportation</td>
+<td class="rt_text_box">Health, Active Living, Fitness, Environment, Transportation, Safety, </td>
 </tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
@@ -136,7 +138,7 @@ provides health information through electronic devices, even at home. This meta-
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Nature</td>
+<td class="rt_text_box">Taylor & Francis</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
