Gratitude in Advertising
Gratitude in Advertising

--- a/en/topic-resources/detail/440/index.html
+++ b/en/topic-resources/detail/440/index.html
@@ -130,7 +130,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
-<td class="rt_text_box">Health, Active Living, Fitness, Environment, Transportation, Safety, </td>
+<td class="rt_text_box">Health, Tobacco, Active Living, AIDS and STBBIs, Environmental health, Fitness, Nutrition, Environment, Climate change mitigation, Climate change adaptation, Safety, Road safety</td>
 </tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
