--- a/en/topic-resources/detail/440/index.html
+++ b/en/topic-resources/detail/440/index.html
@@ -109,8 +109,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://doi.org/10.1080/00218499.2025.2464283" target="_new">https://doi.org/10.1080/00218499.2025.2464283</a></td>
-<td class="rt_text_box"><a href="https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette" target="_new">https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette</a></td>
+<td class="rt_text_box"><a href="https://doi.org/10.1080/00218499.2025.2464283" target="_new">https://doi.org/10.1080/00218499.2025.2464283</a> <a href="https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette" target="_new">https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
@@ -120,7 +119,7 @@ theForm.elements[i].checked = status;
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
 <ul>	
-<li>"When a person is scared and fearful, they're not as receptive to others. They might have heightened awareness of threats—push away the message and close off," she says. "But when a person is feeling grateful, they tend to be more open to people, and to messages."</li>
+<li>"When a person is scared and fearful, they're not as receptive to others. They might have heightened awareness of threats—push away the message and close off. ... But when a person is feeling grateful, they tend to be more open to people, and to messages."</li>
 <li>Study results showed that gratitude-based ads featuring human-like imagery were more likely to lead people to choose the healthier option. Fear, by contrast, was more effective when these human-like cues were absent.</li>
 <li>The findings suggest that combining gratitude with human-like visuals may be a powerful way to encourage healthy behavior.</li>
 <li>Based on three studies from the University of Auckland
@@ -171,7 +170,7 @@ theForm.elements[i].checked = status;
 
 
  <!--
-           <div class="news_cap_top"></div>
+           <div class="news_cap_top"></div>+
 				 <div class="news_body">[Select: $STK_langlink][Case:'fr']	<p>Joignez-vous à notre liste de diffusion:</p>[Case:'en']<p>Join our mailing list:</p>[/Select]
 
 						<form id="form1" method="post" action="">
