Indexing Gratitude in Advertising

--- a/en/topic-resources/fitness/index.html
+++ b/en/topic-resources/fitness/index.html
@@ -129,6 +129,8 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Fitness Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/440">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/438">Mobile Health Interventions Reduce Sitting Time in Older Adults</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>This meta-analysis of three randomized controlled trials found a significant decrease in sedentary behavior with mHealth interventions compared with conventional or no interventions (95% confidence interval.)</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/437">Implement Interventions Through Sporting Organisations</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
