--- a/en/topic-resources/detail/440/index.html
+++ b/en/topic-resources/detail/440/index.html
@@ -109,7 +109,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://doi.org/10.1080/00218499.2025.2464283" target="_new">https://doi.org/10.1080/00218499.2025.2464283</a> <a href="https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette" target="_new">https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette</a></td>
+<td class="rt_text_box"><a href="https://doi.org/10.1080/00218499.2025.2464283" target="_new">https://doi.org/10.1080/00218499.2025.2464283</a> <br> <a href="https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette" target="_new">https://medicalxpress.com/news/2025-07-gratitude-health-ads-healthier-decisions.html#google_vignette</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
