More indexing from Topic Pages

--- a/en/topic-resources/tobacco/index.html
+++ b/en/topic-resources/tobacco/index.html
@@ -127,6 +127,8 @@ We've added twelve new tobacco-related Topic Resources this past year. You can a
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Tobacco Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/440">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/436">Don’t Forget the Humble Text Message</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Text messaging is a proven intervention for changing tobacco behaviors, due to its low cost, vast reach, frequent use, high read rates, and ability to be tailored and personalized.</p> <strong><a href="../../../en/topic-resources/detail/436">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/432">Quit-Lines Reduce Young Adult Vaping (RCT)</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
