--- a/en/topic-resources/climate-change/index.html
+++ b/en/topic-resources/climate-change/index.html
@@ -191,6 +191,8 @@ EN-US;mso-bidi-language:AR-SA;mso-bidi-font-weight:bold'>TM</span></sup>. The Ho
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Climate Change Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/440">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/435">Disgust Sensitivity a Key Barrier to Reducing the Impact of Laundering</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
 <p>The authors argue that disgust sensitivity is a key barrier to changing laundering habits to reduce the environmental impacts of laundering. Accordingly, rather than focusing on environmental impacts, programs should work to extend the use frequency of clothes between washes by desensitizing feelings of disgust.</p> <strong><a href="../../../en/topic-resources/detail/435">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/416">Royalty-Free Climate Visuals Library</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
