TR-Computer Prompts and Sedentary Behavior

--- a/en/topic-resources/active-living/index.html
+++ b/en/topic-resources/active-living/index.html
@@ -194,6 +194,8 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Active Living Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/441">Meta-Analysis Suggests Computer Prompts Can Help Reduce Sedentary Behaviour</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>A meta-analysis of 18 studies found a significant reduction in sitting time and steps per workday.</p> <strong><a href="../../../en/topic-resources/detail/441">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/440">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p> <strong><a href="../../../en/topic-resources/detail/440">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/439">Low-Stress Bicycle Facilities Boost Bicycle Commuting</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
