--- a/en/topic-resources/detail/441/index.html
+++ b/en/topic-resources/detail/441/index.html
@@ -109,8 +109,8 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0" target="_new"https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0"</a> 
-<tr>
+<td class="rt_text_box"><a href="https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0" target="_new"https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0</a></td> 
+-<tr>
 <td class="highlight_box">Summary:</td>
 <td class="rt_text_box"><p>Meta-Analysis Suggests Computer Prompts Can Help Reduce Sedentary Behaviour</p></td>
 </tr>
