--- a/en/topic-resources/detail/441/index.html
+++ b/en/topic-resources/detail/441/index.html
@@ -109,7 +109,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="http://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0" target="_new"http://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0</a></td> 
+<td class="rt_text_box"><a href="http://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0" target="_new:>http://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0</a></td> 
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
