--- a/en/topic-resources/detail/442/index.html
+++ b/en/topic-resources/detail/442/index.html
@@ -1,4 +1,4 @@
-z
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -105,25 +105,24 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Improving Physical Activity in Adults with Cardiometabolic Conditions</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Meta-Analysis Suggests Computer Prompts Can Help Reduce Sedentary Behaviour</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://bmcmedicine.biomedcentral.com/articles/10.1186/s12916-025-04240-6" target="_new">https://bmcmedicine.biomedcentral.com/articles/10.1186/s12916-025-04240-6</a></td>
+<td class="rt_text_box"><a href="https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0" target="_new">https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>Multi-component interventions were most effective at improving physical activity levels among people with cardiometabolic conditions</p></td>
+<td class="rt_text_box"><p>Meta-Analysis Suggests Computer Prompts Can Help Reduce Sedentary Behaviour</p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
 <ul>	
-<li>This study compared the effectiveness of four different physical activity intervention designs (education, behaviour-change, motivational/goal-setting and multi-component) against usual care/minimal intervention in increasing physical activity among adults with cardiometabolic conditions.</li>
-<li>Sixty-two randomised controlled trials comprising 8,952 participants were included in this study. 51 of the trials were analysed in the meta-analysis.</li>
-<li>Only multi-component interventions were consistently found to significantly increase physical activity across all primary measures-steps per day, the amount of moderate-vigorous physical activity and combined physical activity-compared to usual care or minimal care.</li>
-<li>The crucial next step for patients, clinicians and policymakers is to enhance the understanding of how to tailor and implement these interventions effectively for sustained improvements in long-term physical activity levels.
-</li>
+<li>This systematic review and meta-analysis examined 18 studies involving 1,164 office workers.</li>
+<li>The median intervention length was 8 weeks, ranging from one to 24 weeks. Studies using only computer prompts included breaks lasting from 1 to 10 min every 30 min up to an hour. Combined strategies included breaks from 6 to 30 min every 30 min up to 3 h.</li>
+<li>The meta-analysis found a significant reduction of 12.46 min/workday in sitting time (95% CI: -18.12, -6.80) and a significant increase of 1029.99 steps/workday (95% CI: 815.97, 1244).</li>
+<li>While the findings are positive, the certainty of evidence for primary outcomes was rated low to moderate; more long-term prospective studies with larger sample sizes are needed.</li>
 </ul>
 </td>
 </tr>
@@ -137,11 +136,11 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">BMC/Springer</td>
+<td class="rt_text_box">IJBNPA</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
-<td class="rt_text_bottom">2025-10-05 10:16:12</td>
+<td class="rt_text_bottom">2025-10-04 10:16:12</td>
 </tr>
 </table>
 </div><!--/left_content-->
