--- a/en/topic-resources/detail/442/index.html
+++ b/en/topic-resources/detail/442/index.html
@@ -105,11 +105,11 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Meta-Analysis Suggests Computer Prompts Can Help Reduce Sedentary Behaviour</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Improving Physical Activity in Adults with Cardiometabolic Conditions</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0" target="_new">https://ijbnpa.biomedcentral.com/articles/10.1186/s12966-025-01781-0</a></td>
+<td class="rt_text_box"><a href="https://bmcmedicine.biomedcentral.com/articles/10.1186/s12916-025-04240-6" target="_new">https://bmcmedicine.biomedcentral.com/articles/10.1186/s12916-025-04240-6</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
