Remove extra bullet /dot

--- a/en/topic-resources/detail/442/index.html
+++ b/en/topic-resources/detail/442/index.html
@@ -122,7 +122,7 @@ theForm.elements[i].checked = status;
 <li>This study compared the effectiveness of four different physical activity intervention designs (education, behaviour-change, motivational/goal-setting and multi-component) against usual care/minimal intervention in increasing physical activity among adults with cardiometabolic conditions.</li>
 <li>Sixty-two randomised controlled trials comprising 8,952 participants were included in this study. 51 of the trials were analysed in the meta-analysis.</li>
 <li>Only multi-component interventions were consistently found to significantly increase physical activity across all primary measures-steps per day, the amount of moderate-vigorous physical activity and combined physical activity-compared to usual care or minimal care.</li>
-<li>•	The crucial next step for patients, clinicians and policymakers is to enhance the understanding of how to tailor and implement these interventions effectively for sustained improvements in long-term physical activity levels.</li>
+<li>The crucial next step for patients, clinicians and policymakers is to enhance the understanding of how to tailor and implement these interventions effectively for sustained improvements in long-term physical activity levels.</li>
 </ul>
 </td>
 </tr>
