Digital Health Interventions - Chronic Illness

--- a/en/topic-resources/fitness/index.html
+++ b/en/topic-resources/fitness/index.html
@@ -129,6 +129,8 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Fitness Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/443">Digital Health Interventions Can Significantly Reduce Sedentary Behavior among Patients with Chronic Illness</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Digital Health Interventions Can Significantly Reduce Sedentary Behavior among Patients with Chronic Illness.</p> <strong><a href="../../../en/topic-resources/detail/443">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/442">Improving Physical Activity in Adults with Cardiometabolic Conditions</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Multi-component interventions were most effective at improving physical activity levels among people with cardiometabolic conditions.</p> <strong><a href="../../../en/topic-resources/detail/442">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/441">Meta-Analysis Suggests Computer Prompts Can Help Reduce Sedentary Behaviour</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
