--- a/en/topic-resources/active-living/index.html
+++ b/en/topic-resources/active-living/index.html
@@ -194,6 +194,8 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Active Living Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/444">Family-Centered Interventions Can Increase Moderate-to-Vigorous Physical Activity in children aged under 13.</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Family-centered interventions enhanced children's levels of moderate-to-vigorous physical activity, particularly in the short-term and on weekends. However, there was limited effect on reducing sedentary behavior.</p> <strong><a href="../../../en/topic-resources/detail/444">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/443">Digital Health Interventions Can Significantly Reduce Sedentary Behavior among Patients with Chronic Illness</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Digital Health Interventions Can Significantly Reduce Sedentary Behavior among Patients with Chronic Illness.</p> <strong><a href="../../../en/topic-resources/detail/443">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/442">Improving Physical Activity in Adults with Cardiometabolic Conditions</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
