TR - Monetary Incentives and AIDS

--- a/en/topic-resources/aids/index.html
+++ b/en/topic-resources/aids/index.html
@@ -138,6 +138,8 @@ We've added two new Topic Resources related to HIV/AIDS and STBBI's this past ye
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Aids Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/445">Monetary Incentives Can Effectively Improve Viral Suppression and Adherence to Antiretroviral Therapy among People Living with HIV</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>This meta-analysis found that monetary incentives improved viral suppression and adherence to antiretroviral therapy among people living with HIV.</p> <strong><a href="../../../en/topic-resources/detail/445">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/440">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p> <strong><a href="../../../en/topic-resources/detail/440">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/338">mHealth-Based Gamification Interventions among Men Who Have Sex with Men in the HIV Prevention and Care Continuum: Systematic Review and Meta-Analysis</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
