--- a/en/topic-resources/detail/445/index.html
+++ b/en/topic-resources/detail/445/index.html
@@ -120,9 +120,8 @@ theForm.elements[i].checked = status;
 <td class="rt_text_box">
 <ul>	
 <li>The study reviewed 13 randomized controlled trials.</li>
-<li>•	Compared with routine care, monetary incentives significantly improved viral suppression (OR = 1.39,95%CI: 1.11, 1.74); p = 0.004; I²=42%), adherence to antiretroviral therapy (OR = 1.62,95%CI: 1.13,2.31; p = 0.008; I²=30%) and retention in care (OR = 1.27, 95% CI: 1.02-1.57; p = 0.03; I²=9%).</li>
-<li>Meta-analysis revealed that family-centered interventions were significantly associated with increased moderate-to-vigorous physical activity (WMD = 5.13, 95% CI = 1.09 to 9.17, p = 0.01).</li>
-<li>•	Further research is needed to assess the long-term sustainability and cost-effectiveness of such interventions.</li>
+<li>Compared with routine care, monetary incentives significantly improved viral suppression (OR = 1.39,95%CI: 1.11, 1.74); p = 0.004; I²=42%), adherence to antiretroviral therapy (OR = 1.62,95%CI: 1.13,2.31; p = 0.008; I²=30%) and retention in care (OR = 1.27, 95% CI: 1.02-1.57; p = 0.03; I²=9%).</li>
+<li>Further research is needed to assess the long-term sustainability and cost-effectiveness of such interventions.</li>
 </ul>
 </td>
 </tr>
