TR - ICLEI Climate Communications Case Stories

--- a/en/topic-resources/climate-change/index.html
+++ b/en/topic-resources/climate-change/index.html
@@ -191,6 +191,8 @@ EN-US;mso-bidi-language:AR-SA;mso-bidi-font-weight:bold'>TM</span></sup>. The Ho
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Climate Change Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/447">Climate Communications Case Stories</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>This collection offers inspiring examples of climate communications that you can adapt to your needs and situation.</p> <strong><a href="../../../en/topic-resources/detail/447">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/440">Gratitude in Advertising can Promote Healthier Decisions than Scare Tactics</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>Gruesome smoking warnings, frightening obesity statistics and shocking drink-driving campaigns all use fear to drive behavior change. But a University of Auckland researcher says it might be time to try a different approach.</p> <strong><a href="../../../en/topic-resources/detail/440">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/435">Disgust Sensitivity a Key Barrier to Reducing the Impact of Laundering</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
