--- a/en/topic-resources/detail/447/index.html
+++ b/en/topic-resources/detail/447/index.html
@@ -136,7 +136,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Journal of Youth and Adolescence / Springer</td>
+<td class="rt_text_box">ICLEI</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
