--- a/en/topic-resources/detail/448/index.html
+++ b/en/topic-resources/detail/448/index.html
@@ -109,7 +109,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://floodsmartcanada.ca" target="_new">https://floodsmartcanada.ca</a></td>
+<td class="rt_text_box"><a href="https://floodsmartcanada.ca/floodsmart-resources/" target="_new">https://floodsmartcanada.ca/floodsmart-resources/</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
@@ -121,7 +121,7 @@ theForm.elements[i].checked = status;
 <td class="rt_text_box">
 These resources include the following.
 <ul>	
-<li>Reports for practitioners/li>
+<li>Reports for practitioners</li>
 <li>Educational materials</li>
 <li>Infographics for use</li>
 <li>Social media toolkits</li>
