--- a/en/topic-resources/detail/448/index.html
+++ b/en/topic-resources/detail/448/index.html
@@ -113,7 +113,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>The FloodSmart website offers a range of resources to support your flood prevention and preparedness communications.
+<td class="rt_text_box"><p>The FloodSmart website offers a range of resources to support your flood prevention and preparedness communications and engagement efforts.
 </p></td>
 </tr>
 <tr>
