--- a/en/topic-resources/detail/449/index.html
+++ b/en/topic-resources/detail/449/index.html
@@ -113,7 +113,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>A series of three experiments suggests that if scientists want to increase public urgency around climate change, they should highlight clear, concrete, significant shifts instead of slow-moving trends.
+<td class="rt_text_box"><p>A series of three experiments suggests that if we want to increase public urgency around climate change, we should highlight clear, concrete, significant shifts instead of slow-moving trends.
 </p></td>
 </tr>
 <tr>
