TR - Literature Review – Reducing Consumer Plate Waste

--- a/en/topic-resources/detail/451/index.html
+++ b/en/topic-resources/detail/451/index.html
@@ -105,52 +105,46 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Six Key Messages for Climate Action</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Literature Review – Reducing Consumer Plate Waste</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://link.springer.com/article/10.1007/s10584-025-03934-3" target="_new">https://link.springer.com/article/10.1007/s10584-025-03934-3</a></td>
+<td class="rt_text_box"><a href="https://www.emerald.com/jcm/article-abstract/doi/10.1108/JCM-06-2024-6958/1253628/" target="_new">https://www.emerald.com/jcm/article-abstract/doi/10.1108/JCM-06-2024-6958/1253628/</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>A 2023 survey (n=1,011) found that six climate change messages are highly predictive of attitudinal and behavioral outcomes.
+<td class="rt_text_box"><p>This 2025 study presents a systematic literature review of peer-reviewed journals regarding barriers, motivators, utilisation and effectiveness of marketing in plate waste reduction, and current theories used in plate waste reduction programs over the past decade.
 </p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
-The authors used data from a US nationally-representative survey conducted in 2023 (n = 1,011) to assess the impact of the following six messages.
+The review focused on 27 studies of plate waste reduction programs implemented in non-buffet-style catering outlets.
 <ol>	
-<li>Climate change is happening (‘It’s real’)</li>
-<li>The authors conducted three experiments (n=766, n=235, n=292) that involved presenting data as either gradual changes or as sudden changes. </li>
-<li>Human activity is causing climate change (‘It’s us’)</li>
-<li>There is a scientific consensus about human-caused climate change (‘Experts agree’)</li>
-<li>Climate change harms people (‘It’s bad’)</li>
-<li>A majority of people are concerned about climate change and support climate action (‘Others care’)</li>
-<li>Actions can be taken to limit the harm (‘There’s hope’).
-</li>
-</ol>
-They found that all six messages were highly predictive of at least one, and in some instances many, of the attitudinal and behavioral outcomes analyzed. 
+<li>The barriers to reducing plate waste are mainly based on individual factors, including attitude towards food quality, perception of plate waste, individual habits, and knowledge and information exchange.</li
+<li>The motivators for reducing plate waste are broadly driven by two kinds of factors: those on the management side and those on the customer side.
+<ol>
+<li>Those on the management side include (i) dining facilities and settings, (ii) management frontline (staff training, waste measurement, and menu design/planning) and (iii) awareness campaigns</li>
+<li>Those on the customer side involve (i) dining options and services (portion size, serving style adjustment, and dinnerware adjustment) and (ii) financial incentives and penalties from restaurants. 
+</li></li>
+</ol></ol>
 </td>
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
-<td class="rt_text_box">Environment, Climate Change Adaptation, Climate Change Mitigation</td>
-</tr>
-<td class="highlight_box">Location:</td>
-<td class="rt_text_box">US</td>
+<td class="rt_text_box">Environment, Climate Change Mitigation, Waste Reduction</td>
 </tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
-<td class="rt_text_box">Consumer Research, Training and Toolkits</td>
+<td class="rt_text_box">Consumer Research</td>
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">Springer</td>
+<td class="rt_text_box">Emerald / Journal of Consumer Marketing</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
-<td class="rt_text_bottom">2025-10-06 09:12:17</td>
+<td class="rt_text_bottom">2025-10-07 10:21:23/td>
 </tr>
 </table>
 </div><!--/left_content-->
