--- a/en/topic-resources/waste-reduction/index.html
+++ b/en/topic-resources/waste-reduction/index.html
@@ -495,6 +495,8 @@ mso-bidi-font-family:"Times New Roman";}
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Waste Reduction Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/451">Literature Review – Reducing Consumer Plate Waste</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
+<p>This 2025 study presents a systematic literature review of peer-reviewed journals regarding barriers, motivators, utilisation and effectiveness of marketing in plate waste reduction, and current theories used in plate waste reduction programs over the past decade.</p> <strong><a href="../../../en/topic-resources/detail/451">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/435">Disgust Sensitivity a Key Barrier to Reducing the Impact of Laundering</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
 <p>The authors argue that disgust sensitivity is a key barrier to changing laundering habits to reduce the environmental impacts of laundering. Accordingly, rather than focusing on environmental impacts, programs should work to extend the use frequency of clothes between washes by desensitizing feelings of disgust.</p> <strong><a href="../../../en/topic-resources/detail/435">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/341">Food Waste Segmentation</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
