--- a/en/topic-resources/detail/451/index.html
+++ b/en/topic-resources/detail/451/index.html
@@ -121,12 +121,12 @@ theForm.elements[i].checked = status;
 <td class="rt_text_box">
 The review focused on 27 studies of plate waste reduction programs implemented in non-buffet-style catering outlets.
 <ol>	
-<li>The barriers to reducing plate waste are mainly based on individual factors, including attitude towards food quality, perception of plate waste, individual habits, and knowledge and information exchange.</li
-<li>The motivators for reducing plate waste are broadly driven by two kinds of factors: those on the management side and those on the customer side.
+<li>The barriers to reducing plate waste are mainly based on individual factors, including attitude towards food quality, perception of plate waste, individual habits, and knowledge and information exchange.</li>
+<li>The motivators for reducing plate waste are broadly driven by two kinds of factors: those on the management side and those on the customer side.</li>
 <ol>
 <li>Those on the management side include (i) dining facilities and settings, (ii) management frontline (staff training, waste measurement, and menu design/planning) and (iii) awareness campaigns</li>
 <li>Those on the customer side involve (i) dining options and services (portion size, serving style adjustment, and dinnerware adjustment) and (ii) financial incentives and penalties from restaurants. 
-</li></li>
+</li>
 </ol></ol>
 </td>
 </tr>
