--- a/en/topic-resources/detail/451/index.html
+++ b/en/topic-resources/detail/451/index.html
@@ -122,12 +122,11 @@ theForm.elements[i].checked = status;
 The review focused on 27 studies of plate waste reduction programs implemented in non-buffet-style catering outlets.
 <ol>	
 <li>The barriers to reducing plate waste are mainly based on individual factors, including attitude towards food quality, perception of plate waste, individual habits, and knowledge and information exchange.</li>
-<li>The motivators for reducing plate waste are broadly driven by two kinds of factors: those on the management side and those on the customer side.</li>
+<li>The motivators for reducing plate waste are broadly driven by two kinds of factors: those on the management side and those on the customer side.
 <ol>
 <li>Those on the management side include (i) dining facilities and settings, (ii) management frontline (staff training, waste measurement, and menu design/planning) and (iii) awareness campaigns</li>
-<li>Those on the customer side involve (i) dining options and services (portion size, serving style adjustment, and dinnerware adjustment) and (ii) financial incentives and penalties from restaurants. 
-</li>
-</ol></ol>
+<li>Those on the customer side involve (i) dining options and services (portion size, serving style adjustment, and dinnerware adjustment) and (ii) financial incentives and penalties from restaurants.</li>
+</ol></li></ol>
 </td>
 </tr>
 <tr>
