--- a/en/topic-resources/detail/451/index.html
+++ b/en/topic-resources/detail/451/index.html
@@ -143,7 +143,7 @@ The review focused on 27 studies of plate waste reduction programs implemented i
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
-<td class="rt_text_bottom">2025-10-07 10:21:23/td>
+<td class="rt_text_bottom">2025-10-07 10:21:23</td>
 </tr>
 </table>
 </div><!--/left_content-->
