--- a/en/topic-resources/climate-change/index.html
+++ b/en/topic-resources/climate-change/index.html
@@ -191,6 +191,8 @@ EN-US;mso-bidi-language:AR-SA;mso-bidi-font-weight:bold'>TM</span></sup>. The Ho
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Climate Change Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/451">Focus Climate Messages on the Future and Dear Ones</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Based on research with 7,624 U.S. adults, interventions that emphasize social relevance and future thinking are most effective at motivating climate action.</p> <strong><a href="../../../en/topic-resources/detail/451">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/450">Six Key Messages for Climate Action</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>A 2023 survey (n=1,011) found that six climate change messages are highly predictive of attitudinal and behavioral outcomes.</p> <strong><a href="../../../en/topic-resources/detail/450">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/449">Highlight Clear, Concrete, Significant Climate Shifts Instead of Slow-Moving Climate Trends</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
